# VibeDiff

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
src/vibediff/: __init__.py  __main__.py  analyze.py  cli.py  collaboration.py  config.py  diff.py  drift.py  fingerprint.py  idiom.py  mcp_server.py  synthesize.py
src/vibediff/input/: git_diff.py  models.py
tests/: conftest.py  test_analyze.py  test_baseline.py  test_collaboration.py  test_comment.py  test_config.py  test_diff.py  test_drift.py  test_fingerprint.py  test_idiom.py  test_js_support.py  test_mcp.py  test_output.py  test_synthesize.py  test_validation.py
tests/fixtures/diffs/: ai_generated.diff  human_written.diff  mixed_collaboration.diff
tests/fixtures/diffs/corpus/: ai_go_patterns.diff  ai_java_patterns.diff  ai_test_generation.diff  copilot_fastapi_crud.diff  human_cache_fix.diff  human_refactor.diff
tests/test_input/: test_git_diff.py  test_models.py
