[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibediff"
version = "0.1.0"
description = "AI-era code review. Detects AI-generated patterns, style drift, and collaboration quality in your PRs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "VibeDiff Contributors" },
]
keywords = ["code-review", "ai", "linter", "git", "diff", "style"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "unidiff>=0.7",
]

[project.optional-dependencies]
ast = ["tree-sitter", "tree-sitter-language-pack"]
github = ["requests>=2.28"]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.scripts]
vibediff = "vibediff.cli:main"

[project.urls]
Homepage = "https://github.com/vibediff/vibediff"
Repository = "https://github.com/vibediff/vibediff"
Issues = "https://github.com/vibediff/vibediff/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vibediff"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
