[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibediff"
version = "0.1.1"
description = "Knows when a PR doesn't belong in your codebase."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "unidiff>=0.7",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.scripts]
vibediff = "vibediff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vibediff"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
